--- a/contato.html
+++ b/contato.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosso Portfólio - Ki-Pedreiro</title>
+    <title>Nossos Serviços - Ki-Pedreiro</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body >
-        <header class="cabecalho">
+<body>
+<header class="cabecalho">
         <div class="cabecalho__barra-superior">
             <div class="container">
                 <span><img src="assets/img/icon/001-phone-receiver-silhouette.png" alt="Ícone Telefone"> (11) 9 4802-0922</span>
@@ -31,41 +31,9 @@
             </div>
         </nav>
     </header>
-    <main>
-<section class="projetos">
-            <div class="container">
-                <h2 class="projetos__titulo">Nossos Projetos</h2>
-                <div class="projetos__grid">
-                    <div class="card-projeto" style="background-image: url('assets/img/room-showing-dramatic-beforeandafter-renovation-transformation.jpg');">
-                        <div class="card-projeto__overlay">
-                            <h3>Construção Residencial</h3>
-                            <p>Projeto completo de alvenaria estrutural para residência unifamiliar.</p>
-                        </div>
-                    </div>
-                     <div class="card-projeto" style="background-image: url('assets/img/workers-examining-work.jpg');">
-                        <div class="card-projeto__overlay">
-                            <h3>Escritório Moderno</h3>
-                            <p>Reforma e adequação de layout para ambiente corporativo.</p>
-                        </div>
-                    </div>
-                     <div class="card-projeto" style="background-image: url('assets/img/electrician-installer-with-tool-his-hands-working-with-cable-construction-site.jpg');
-                     background-position-y: top;">
-                        <div class="card-projeto__overlay">
-                            <h3>Instalação Elétrica</h3>
-                            <p>Infraestrutura elétrica para galpão industrial.</p>
-                        </div>
-                    </div>
-                     <div class="card-projeto" style="background-image: url('assets/img/worker-applying-mortar-with-trowel-brick.jpg');">
-                        <div class="card-projeto__overlay">
-                            <h3>Reforço Estrutural</h3>
-                            <p>Gestão e execução de reforço em estrutura de concreto.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="projetos__botao-container">
-                    <a href="projetos.html" class="botao botao--secundario">Todos os Projetos</a>
-                </div>
-            </div>
+<main>
+    <section class="servicos">
+         
         </section>
             </main>
 
