--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="projetos.html" class="cabecalho__link">Portfólio</a></li>
                     <li><a href="servicos.html" class="cabecalho__link">Serviços</a></li>
                     <li><a href="#" class="cabecalho__link">Área de atuação</a></li>
-                    <li><a href="#" class="cabecalho__link">Contato</a></li>
+                    <li><a href="contato.html" class="cabecalho__link">Contato</a></li>
                 </ul>
             </div>
         </nav>
